# bacc

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh
contracts/: CMakeLists.txt
contracts/eosiolib/: contract_config.hpp.in
contracts/noc.hello/: CMakeLists.txt
contracts/noc.msig/: CMakeLists.txt  noc.msig.cpp
contracts/noc.system/: CMakeLists.txt  configs.hpp  delegate_bandwidth.cpp  native.cpp  noc.system.abi  noc.system.cpp  noc.system.hpp  producer.cpp  vote4ram.cpp  voting.cpp
contracts/noc.token/: CMakeLists.txt  noc.token.cpp  noc.token.hpp
doc/: boot.md  getting_start.md  system_bp.md  system_rank.md  system_reward.md  system_vote.md
doc/contracts/: token.md  update.md
libraries/: CMakeLists.txt
libraries/chain/: controller.cpp  eosio_contract.cpp  eosio_contract_abi.cpp  resource_limits.cpp  wasm_interface.cpp
libraries/chain/include/eosio/chain/: config.hpp.in  config_on_chain.hpp  memory_db.hpp  (+3 more)
libraries/fc/: CMakeLists.txt
libraries/fc/include/fc/: fc_defines.hpp.in
libraries/fc/src/crypto/: private_key.cpp  public_key.cpp
libraries/fc/src/log/: console_appender.cpp
plugins/: CMakeLists.txt
plugins/chain_plugin/: chain_plugin.cpp
plugins/mongo_db_plugin/: mongo_db_plugin.cpp
plugins/producer_plugin/: producer_plugin.cpp
programs/: CMakeLists.txt
programs/cleos/: main.cpp
programs/genesis/: CMakeLists.txt  main.cpp
programs/keosd/: main.cpp
programs/nodeos/: CMakeLists.txt
scripts/: build_ubuntu.sh
tutorials/bios-script/: bios_boot.py
tutorials/bios-script/genesis-data/: genesis.json  key.json
(+3 files in other folders)
